# tree-sitter-bdl

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding_test.go
bindings/node/: index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_bdl/: __init__.py
bindings/rust/: build.rs  lib.rs
rule/: fgl.js  flow.js  interface.js  sql.js  type.js  util.js
rules/: common.js  fgl.js  interface.js  program.js  sql.js  types.js  util.js
src/: grammar.json  node-types.json  parser.c  scanner.c
test/4gl/: comment.4gl  comprehensive_fgl.4gl
test/corpus/: comment.txt  declaration.txt  directive.txt  exception.txt  exception_statement.txt  expression.txt  expressions.txt  fgl.txt  fgl_statement.txt  flow.txt  flow_statement.txt  function.txt  interface.txt  interface_statement.txt  sql.txt  sql_statement.txt
